# gnn-hts-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: italian.yaml  walmart.yaml
datasets/italian/graph/: adj_hierarchy.npy  adj_static_hybrid_cosine.npy  adj_static_similarity_cosine.npy  sum_matrix.csv
datasets/walmart/graph/: adj_hierarchy.npy  adj_static_hybrid_cosine.npy  adj_static_similarity_cosine.npy  sum_matrix.csv
scripts/: _output_paths.py  prepare_data.py  run_paper_experiments.py  train_single.py
src/data/: loader.py  paths.py
src/models/: __init__.py  graph_utils.py  reconciliation.py
src/models/talp/: __init__.py  backbone.py
src/models/tglp/: __init__.py  backbone.py
src/training/: io.py  loss.py  trainer.py
src/utils/: metrics.py  seed.py
