[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hts-gnn"
version = "0.1.0"
description = "A Graph Neural Network-based Framework for Hierarchical Time Series Forecasting in Retail"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "torch>=2.3",
    "torch-geometric>=2.5",
    "torch-geometric-temporal>=0.54",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
